<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	android:background="@color/background_black" 
    tools:context=".ServerScreenActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ftp"
        android:contentDescription="@string/ftp_image" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />
    <Button
        android:id="@+id/btnConnect"
        android:layout_width="150dp"
        android:textColor="@color/manager_text_white"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:text="@string/btn_connect" />

    <Button
        android:id="@+id/btnNew"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@color/manager_text_white"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/btn_new" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@color/manager_text_white"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/btn_edit" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@color/manager_text_white"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/btn_delete" />

</LinearLayout>